--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
     
     <dependencies>
-        <dependency>
+<!--        <dependency>
             <groupId>org.glassfish.metro</groupId>
             <artifactId>webservices-rt</artifactId>
             <version>2.3</version>
@@ -31,7 +31,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.20</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
